--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -172,7 +172,7 @@
   background-repeat: no-repeat
   margin-inline: -3.4rem
   @media screen and (max-width: 992px)
-    background-size: cover
+    background-size: 100% 40%
     margin-inline: -1.4rem 
 
 
@@ -227,3 +227,13 @@ t-color1, .t-color1
 .tarjeta-flip__img
   background-size: contain
   background-repeat: no-repeat
+
+
+@media (max-width: 992px)
+  .slyder-a__bullets__item
+    margin: 0 4.5px 
+    width: 11px
+    height: 11px
+  .slyder-a__btn--sigt, .slyder-a__btn--atrs 
+    width: 40px
+    height: 40px
