Ajustes hallazgos repositorio

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -53,8 +53,9 @@
 .fondo-subt
   background: url('../assets/curso/temas/t3/fondo-subt.png')
   background-position: center
-  background-size: 100% 65%
+  background-size: cover
   background-repeat: no-repeat
+  border-radius: 25px
 .fondo-slider
   background: url('../assets/curso/temas/t1/fondo-slider.png')
   background-position: center
